--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://unsplash.com/photos/yanhwFwyoaU" >
+
+    <img src="https://unsplash.com/photos/yanhwFwyoaU" 
+    alt="A pink Lotus Flower ">
+
+    <img src="https://unsplash.com/photos/yanhwFwyoaU" 
+    alt=" A Pink Lotus Flower"
+    title="Water Lillies">
   </body>
 </html>
